change clinic manager no clincis spiel. rearranged clinic schedule form fields

--- a/src/pages/clinic-manager/clinic-manager.html
+++ b/src/pages/clinic-manager/clinic-manager.html
@@ -50,6 +50,9 @@
         </div>
         <div class="speil" *ngIf="clinics?.length === 0" text-center>
             <ion-label>
+                You have not yet added your clinic(s) or You are not affilated to any clinics.
+            </ion-label>
+            <ion-label>
                 Create Clinic by pressing the add button on the lower left of the screen.
             </ion-label>
         </div>
