queue widget on dashboard tab

--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -9,5 +9,6 @@
 	</ion-navbar>
 </ion-header>
 <ion-content>
-	<reminder></reminder>
+	<queue-widget></queue-widget>
+	<reminder-widget></reminder-widget>
 </ion-content>
