--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -26,7 +26,7 @@
             <p>{{serving?.time | date: 'hh:mm a'}} </p>
         </ion-item>
     </div>
-    <!-- TODO: [ngClass]="{'minimize': controlCss}" -->
+    <!-- TODO:  -->
     <div class="control-bar">
         <ion-grid>
             <ion-row>
