--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -113,7 +113,7 @@
         <button ion-fab color="accent"><ion-icon name="add"></ion-icon></button>
         <ion-fab-list side="left">
             <button color="accent-light" ion-fab (click)="addNewPatient()"><ion-icon name="person-add"></ion-icon></button>
-            <button color="accent-light" ion-fab><ion-icon name="search"></ion-icon>
+            <button color="accent-light" ion-fab (click)="search()"><ion-icon name="search"></ion-icon>
 			</button>
         </ion-fab-list>
     </ion-fab>
