redesign of patient allergy component to retain initial value

--- a/src/pages/patient-profile/patient-profile.html
+++ b/src/pages/patient-profile/patient-profile.html
@@ -56,7 +56,7 @@
             </ion-col>
         </ion-row>
     </div>
-    <consultation-segment></consultation-segment>
+    <consultation-segment [patientId]="patientId"></consultation-segment>
     <ion-card class="timeline">
         <ion-card-header>
             <ion-label>Timeline</ion-label>
