--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
       margin: 0px;
       background: url("assets/img/bg.jpg");
       background-repeat: no-repeat;
-      background-position: center;
+      background-position: left;
       background-size: cover;
     }
 
